tests/baselines/reference/unicodeExtendedEscapesInRegularExpressions13(target=es5).errors.txt
unicodeExtendedEscapesInRegularExpressions13.ts(1,21): error TS1499: This regular expression flag is only available when targeting 'ES2015' or later.


==== unicodeExtendedEscapesInRegularExpressions13.ts (1 errors) ====
    var x = /\u{DDDDD}/gu;
                        ~
!!! error TS1499: This regular expression flag is only available when targeting 'ES2015' or later.
    